// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: button landscape default matches snapshot 1`] = `
<DocumentFragment>
  <button
    aria-label="button"
    class="rounded-full col-span-1 bg-gray-200 text-gray-500 min-h-btn-l min-w-btn-l"
    type="button"
    value="button"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`component: button portrait default matches snapshot 1`] = `
<DocumentFragment>
  <button
    aria-label="button"
    class="rounded-full col-span-1 bg-gray-200 text-gray-500 min-w-btn-p min-h-btn-p"
    type="button"
    value="button"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`component: button portrait variants number - matches snapshot 1`] = `
<DocumentFragment>
  <button
    aria-label="button"
    class="rounded-full col-span-1 bg-gray-400 text-gray-100 min-w-btn-p min-h-btn-p"
    type="button"
    value="button"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`component: button portrait variants operator - matches snapshot 1`] = `
<DocumentFragment>
  <button
    aria-label="button"
    class="rounded-full col-span-1 bg-orange-200 text-gray-100 dark:bg-orange-100 min-w-btn-p min-h-btn-p"
    type="button"
    value="button"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`component: button portrait variants scientific - matches snapshot 1`] = `
<DocumentFragment>
  <button
    aria-label="button"
    class="rounded-full col-span-1 bg-gray-500 text-gray-100 min-w-btn-p min-h-btn-p"
    type="button"
    value="button"
  >
    button
  </button>
</DocumentFragment>
`;
